# KituneTone-DAW

./: .gitignore  CMakeLists.txt  README.md  build_portaudio_asio.cmd  rebuild.cmd
cmake/modules/: PluginList.cmake
cmake/nsis/: CMakeLists.txt  lmms.exe.manifest  lmms.rc.in
data/: CMakeLists.txt
data/fonts/: CMakeLists.txt
data/locale/: CMakeLists.txt  ja.ts
data/projects/: CMakeLists.txt
data/projects/templates/: Empty.ktt  default.mpt
data/themes/default/: style.css
docs/: USER_MANUAL.md
include/: AudioEngine.h  AudioEngineWorkerThread.h  AudioPortAudio.h  AudioRecorder.h  AutomatableModelView.h  Clip.h  ClipView.h  ConfigManager.h  EffectChain.h  EffectControlDialog.h  EffectRackView.h  GuiApplication.h  Instrument.h  InstrumentFunctionViews.h  InstrumentMidiIOView.h  InstrumentSoundShapingView.h  InstrumentTrack.h  InstrumentTrackView.h  InstrumentTrackWindow.h  InstrumentTuningView.h  KitsuneToneBranding.h  LmmsStyle.h  LocklessList.h  MainWindow.h  MidiClip.h  MidiEvent.h  MidiPort.h  MidiWinMM.h  Mixer.h  MixerView.h  NotePlayHandle.h  PatternClip.h  PatternEditor.h  PatternStore.h  PatternTrack.h  PatternTrackView.h  PianoRoll.h  PianoView.h  PluginBrowser.h  PluginView.h  (+18 more)
packaging/windows/: KitsuneTone.nsi  build-release.ps1  release-notes-v2.1.0-beta.md  release-notes-v2.1.0.md  release-notes-v2.1.1.md  release-notes-v2.1.2.md  release-notes-v2.1.3.md  release-notes-v2.1.4.md  release-notes-v2.1.5.md  release-notes-v2.2.0.md  release-notes-v2.2.1.md  release-notes-v2.2.2.md  sign-artifacts.ps1
plugins/Compressor/: CompressorControlDialog.cpp
plugins/MidiImport/: MidiImport.cpp
plugins/TriangleVst3/: CMakeLists.txt  TriangleSynth.cpp
plugins/Vst3Base/: CMakeLists.txt  Vst3AraHost.cpp  Vst3AraHost.h  Vst3Plugin.cpp  Vst3Plugin.h  Vst3PluginView.cpp  Vst3PluginView.h  vst3_base.cpp
plugins/Vst3Effect/: CMakeLists.txt  Vst3Effect.cpp  Vst3Effect.h  Vst3SubPluginFeatures.cpp  Vst3SubPluginFeatures.h
plugins/Vst3Instrument/: CMakeLists.txt  Vst3Instrument.cpp  Vst3Instrument.h
plugins/VstBase/: VstPlugin.cpp  VstPlugin.h
src/: CMakeLists.txt
src/core/: AudioBusHandle.cpp  AudioEngine.cpp  AudioEngineWorkerThread.cpp  AudioRecorder.cpp  AutomationClip.cpp  CMakeLists.txt  Clip.cpp  ConfigManager.cpp  DataFile.cpp  EffectChain.cpp  Engine.cpp  ImportFilter.cpp  InstrumentFunctions.cpp  Mixer.cpp  NotePlayHandle.cpp  Oscillator.cpp  PatternClip.cpp  PatternStore.cpp  PluginFactory.cpp  SampleClip.cpp  Song.cpp  TimeStretch.cpp  Track.cpp  TrackContainer.cpp  main.cpp
src/core/audio/: AudioJack.cpp  AudioPortAudio.cpp  AudioSoundIo.cpp
src/core/midi/: MidiPort.cpp  MidiWinMM.cpp
src/gui/: AutomatableModelView.cpp  EffectView.cpp  FileBrowser.cpp  GuiApplication.cpp  LmmsStyle.cpp  MainWindow.cpp  MixerChannelView.cpp  MixerView.cpp  PluginBrowser.cpp  SendButtonIndicator.cpp  SubWindow.cpp
src/gui/clips/: AutomationClipView.cpp  ClipView.cpp  MidiClipView.cpp  PatternClipView.cpp  SampleClipView.cpp
src/gui/editors/: Editor.cpp  PatternEditor.cpp  PianoRoll.cpp  SongEditor.cpp  TimeLineWidget.cpp  TrackContainerView.cpp
src/gui/instrument/: InstrumentTrackWindow.cpp  InstrumentView.cpp
src/gui/menus/: RecentProjectsMenu.cpp  TemplatesMenu.cpp
src/gui/modals/: ControllerConnectionDialog.cpp  EffectSelectDialog.cpp  SetupDialog.cpp  about_dialog.ui
src/gui/tracks/: InstrumentTrackView.cpp  PatternTrackView.cpp  SampleTrackView.cpp  TrackContentWidget.cpp  TrackOperationsWidget.cpp  TrackView.cpp
src/gui/widgets/: Fader.cpp  Knob.cpp  LcdWidget.cpp  LedCheckBox.cpp
src/tracks/: InstrumentTrack.cpp  MidiClip.cpp  PatternTrack.cpp  SampleTrack.cpp
tests/: CMakeLists.txt
tests/src/core/: AutomatableModelTest.cpp  ConfigManagerTest.cpp
tests/src/tracks/: AutomationTrackTest.cpp  SamplePatternTest.cpp
